--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "travel-website",
+  "name": "asia-venture",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:scss": "sass --no-source-map src/styles/scss/main.scss:src/styles/globals.css"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "countries-list": "^2.6.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-transition-group": "^4.4.5",
+    "unsplash-js": "^7.0.18"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
